--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "code-session",
-  "title": "Code session",
+  "title": "Code Session",
   "description": "Manage coding session workflow",
   "icon": "extension-icon.png",
   "author": "tecoad",
@@ -9,9 +9,27 @@
   "commands": [
     {
       "name": "start-coding-now",
-      "title": "Start coding now",
+      "title": "Start Coding Now",
       "description": "Automate start coding process",
       "mode": "view"
+    }
+  ],
+  "preferences": [
+    {
+      "name": "devFolderPath",
+      "type": "textfield",
+      "required": true,
+      "title": "Development Folder Path",
+      "description": "Path to your development projects folder",
+      "default": "/Users/matheus/Desktop/dev"
+    },
+    {
+      "name": "defaultPort",
+      "type": "textfield",
+      "required": false,
+      "title": "Default Development Port",
+      "description": "Default port for development server (default: 3010)",
+      "default": "3010"
     }
   ],
   "dependencies": {
